// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Accessibility should be accessible when disabled 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="relative flex-row items-center justify-center gap-3 rounded-lg transition-all duration-200 ease-out active:scale-95 opacity-50 bg-cinnabar text-white px-7 py-3"
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
    ]
  }
  testID="ui-button"
>
  <View
    className="opacity-100 transition-opacity duration-150"
    pointerEvents="none"
  >
    <Text
      className="text-lg text-white"
    >
      Disabled Accessible Button
    </Text>
  </View>
</View>
`;

exports[`Button Basic rendering should render with empty string children 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="relative flex-row items-center justify-center gap-3 rounded-lg transition-all duration-200 ease-out active:scale-95 bg-cinnabar text-white px-7 py-3"
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
    ]
  }
  testID="ui-button"
>
  <View
    className="opacity-100 transition-opacity duration-150"
    pointerEvents="none"
  >
    <Text
      className="text-lg text-white"
    />
  </View>
</View>
`;

exports[`Button Basic rendering should render without children 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="relative flex-row items-center justify-center gap-3 rounded-lg transition-all duration-200 ease-out active:scale-95 bg-cinnabar text-white px-7 py-3"
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
    ]
  }
  testID="ui-button"
>
  <View
    className="opacity-100 transition-opacity duration-150"
    pointerEvents="none"
  >
    <Text
      className="text-lg text-white"
    >
      Default
    </Text>
  </View>
</View>
`;

exports[`Button Button modes should render primary mode by default 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="relative flex-row items-center justify-center gap-3 rounded-lg transition-all duration-200 ease-out active:scale-95 bg-cinnabar text-white px-7 py-3"
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
    ]
  }
  testID="ui-button"
>
  <View
    className="opacity-100 transition-opacity duration-150"
    pointerEvents="none"
  >
    <Text
      className="text-lg text-white"
    >
      Primary Button
    </Text>
  </View>
</View>
`;

exports[`Button Button modes should render primary mode explicitly 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="relative flex-row items-center justify-center gap-3 rounded-lg transition-all duration-200 ease-out active:scale-95 bg-cinnabar text-white px-7 py-3"
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
    ]
  }
  testID="ui-button"
>
  <View
    className="opacity-100 transition-opacity duration-150"
    pointerEvents="none"
  >
    <Text
      className="text-lg text-white"
    >
      Primary Button
    </Text>
  </View>
</View>
`;

exports[`Button Button modes should render secondary mode 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="relative flex-row items-center justify-center gap-3 rounded-lg transition-all duration-200 ease-out active:scale-95 bg-white border border-silver text-cinnabar px-[27px] py-[11px]"
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
    ]
  }
  testID="ui-button"
>
  <View
    className="opacity-100 transition-opacity duration-150"
    pointerEvents="none"
  >
    <Text
      className="text-lg text-cinnabar"
    >
      Secondary Button
    </Text>
  </View>
</View>
`;

exports[`Button Button sizes should render large primary button explicitly 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="relative flex-row items-center justify-center gap-3 rounded-lg transition-all duration-200 ease-out active:scale-95 bg-cinnabar text-white px-7 py-3"
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
    ]
  }
  testID="ui-button"
>
  <View
    className="opacity-100 transition-opacity duration-150"
    pointerEvents="none"
  >
    <Text
      className="text-lg text-white"
    >
      Large Primary
    </Text>
  </View>
</View>
`;

exports[`Button Button sizes should render large secondary button explicitly 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="relative flex-row items-center justify-center gap-3 rounded-lg transition-all duration-200 ease-out active:scale-95 bg-white border border-silver text-cinnabar px-[27px] py-[11px]"
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
    ]
  }
  testID="ui-button"
>
  <View
    className="opacity-100 transition-opacity duration-150"
    pointerEvents="none"
  >
    <Text
      className="text-lg text-cinnabar"
    >
      Large Secondary
    </Text>
  </View>
</View>
`;

exports[`Button Button sizes should render large size by default 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="relative flex-row items-center justify-center gap-3 rounded-lg transition-all duration-200 ease-out active:scale-95 bg-cinnabar text-white px-7 py-3"
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
    ]
  }
  testID="ui-button"
>
  <View
    className="opacity-100 transition-opacity duration-150"
    pointerEvents="none"
  >
    <Text
      className="text-lg text-white"
    >
      Large Button
    </Text>
  </View>
</View>
`;

exports[`Button Button sizes should render small primary button 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="relative flex-row items-center justify-center gap-3 rounded-lg transition-all duration-200 ease-out active:scale-95 bg-cinnabar text-white px-4 py-2"
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
    ]
  }
  testID="ui-button"
>
  <View
    className="opacity-100 transition-opacity duration-150"
    pointerEvents="none"
  >
    <Text
      className="text-lg text-white"
    >
      Small Primary
    </Text>
  </View>
</View>
`;

exports[`Button Button sizes should render small secondary button 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="relative flex-row items-center justify-center gap-3 rounded-lg transition-all duration-200 ease-out active:scale-95 bg-white border border-silver text-cinnabar px-[15px] py-[7px]"
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
    ]
  }
  testID="ui-button"
>
  <View
    className="opacity-100 transition-opacity duration-150"
    pointerEvents="none"
  >
    <Text
      className="text-lg text-cinnabar"
    >
      Small Secondary
    </Text>
  </View>
</View>
`;

exports[`Button Custom styling should apply custom className 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="relative flex-row items-center justify-center gap-3 rounded-lg transition-all duration-200 ease-out active:scale-95 bg-cinnabar text-white px-7 py-3 custom-button-class"
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
    ]
  }
  testID="ui-button"
>
  <View
    className="opacity-100 transition-opacity duration-150"
    pointerEvents="none"
  >
    <Text
      className="text-lg text-white"
    >
      Custom Class
    </Text>
  </View>
</View>
`;

exports[`Button Custom styling should apply custom style 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="relative flex-row items-center justify-center gap-3 rounded-lg transition-all duration-200 ease-out active:scale-95 bg-cinnabar text-white px-7 py-3"
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "red",
      "padding": 20,
    }
  }
  testID="ui-button"
>
  <View
    className="opacity-100 transition-opacity duration-150"
    pointerEvents="none"
  >
    <Text
      className="text-lg text-white"
    >
      Custom Style
    </Text>
  </View>
</View>
`;

exports[`Button Custom styling should combine custom className and style 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="relative flex-row items-center justify-center gap-3 transition-all duration-200 ease-out active:scale-95 bg-white border border-silver text-cinnabar px-[27px] py-[11px] rounded-xl"
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "borderWidth": 2,
    }
  }
  testID="ui-button"
>
  <View
    className="opacity-100 transition-opacity duration-150"
    pointerEvents="none"
  >
    <Text
      className="text-lg text-cinnabar"
    >
      Combined Styling
    </Text>
  </View>
</View>
`;

exports[`Button Custom styling should handle undefined className 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="relative flex-row items-center justify-center gap-3 rounded-lg transition-all duration-200 ease-out active:scale-95 bg-cinnabar text-white px-7 py-3"
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
    ]
  }
  testID="ui-button"
>
  <View
    className="opacity-100 transition-opacity duration-150"
    pointerEvents="none"
  >
    <Text
      className="text-lg text-white"
    >
      Undefined Class
    </Text>
  </View>
</View>
`;

exports[`Button Disabled state should combine disabled and loading states 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": true,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="relative flex-row items-center justify-center gap-3 rounded-lg transition-all duration-200 ease-out active:scale-95 opacity-50 bg-cinnabar text-white px-7 py-3"
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
    ]
  }
  testID="ui-button"
>
  <View
    className="opacity-0 transition-opacity duration-150"
    pointerEvents="none"
  >
    <Text
      className="text-lg text-white"
    >
      Disabled Loading
    </Text>
  </View>
  <View
    className="absolute inset-0 items-center justify-center"
    pointerEvents="none"
  >
    <ActivityIndicator
      color="#ffffff"
      size="small"
    />
  </View>
</View>
`;

exports[`Button Disabled state should render disabled styles 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="relative flex-row items-center justify-center gap-3 rounded-lg transition-all duration-200 ease-out active:scale-95 opacity-50 bg-cinnabar text-white px-7 py-3"
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
    ]
  }
  testID="ui-button"
>
  <View
    className="opacity-100 transition-opacity duration-150"
    pointerEvents="none"
  >
    <Text
      className="text-lg text-white"
    >
      Disabled Button
    </Text>
  </View>
</View>
`;

exports[`Button Edge cases should handle boolean children 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="relative flex-row items-center justify-center gap-3 rounded-lg transition-all duration-200 ease-out active:scale-95 bg-cinnabar text-white px-7 py-3"
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
    ]
  }
  testID="ui-button"
>
  <View
    className="opacity-100 transition-opacity duration-150"
    pointerEvents="none"
  />
</View>
`;

exports[`Button Edge cases should handle null children gracefully 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="relative flex-row items-center justify-center gap-3 rounded-lg transition-all duration-200 ease-out active:scale-95 bg-cinnabar text-white px-7 py-3"
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
    ]
  }
  testID="ui-button"
>
  <View
    className="opacity-100 transition-opacity duration-150"
    pointerEvents="none"
  />
</View>
`;

exports[`Button Loading state should hide loading indicator when isLoading is false 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="relative flex-row items-center justify-center gap-3 rounded-lg transition-all duration-200 ease-out active:scale-95 bg-cinnabar text-white px-7 py-3"
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
    ]
  }
  testID="ui-button"
>
  <View
    className="opacity-100 transition-opacity duration-150"
    pointerEvents="none"
  >
    <Text
      className="text-lg text-white"
    >
      Not Loading
    </Text>
  </View>
</View>
`;

exports[`Button Loading state should render loading with custom size 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": true,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="relative flex-row items-center justify-center gap-3 rounded-lg transition-all duration-200 ease-out active:scale-95 opacity-50 bg-cinnabar text-white px-4 py-2"
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
    ]
  }
  testID="ui-button"
>
  <View
    className="opacity-0 transition-opacity duration-150"
    pointerEvents="none"
  >
    <Text
      className="text-lg text-white"
    >
      Small Loading
    </Text>
  </View>
  <View
    className="absolute inset-0 items-center justify-center"
    pointerEvents="none"
  >
    <ActivityIndicator
      color="#ffffff"
      size="small"
    />
  </View>
</View>
`;

exports[`Button Loading state should render loading with different modes 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": true,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="relative flex-row items-center justify-center gap-3 rounded-lg transition-all duration-200 ease-out active:scale-95 opacity-50 bg-cinnabar text-white px-7 py-3"
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
    ]
  }
  testID="ui-button"
>
  <View
    className="opacity-0 transition-opacity duration-150"
    pointerEvents="none"
  >
    <Text
      className="text-lg text-white"
    >
      Loading Primary
    </Text>
  </View>
  <View
    className="absolute inset-0 items-center justify-center"
    pointerEvents="none"
  >
    <ActivityIndicator
      color="#ffffff"
      size="small"
    />
  </View>
</View>
`;

exports[`Button Loading state should render loading with different modes 2`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": true,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="relative flex-row items-center justify-center gap-3 rounded-lg transition-all duration-200 ease-out active:scale-95 opacity-50 bg-white border border-silver text-cinnabar px-[27px] py-[11px]"
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
    ]
  }
  testID="ui-button"
>
  <View
    className="opacity-0 transition-opacity duration-150"
    pointerEvents="none"
  >
    <Text
      className="text-lg text-cinnabar"
    >
      Loading Secondary
    </Text>
  </View>
  <View
    className="absolute inset-0 items-center justify-center"
    pointerEvents="none"
  >
    <ActivityIndicator
      color="#d75639"
      size="small"
    />
  </View>
</View>
`;

exports[`Button Loading state should show loading indicator when isLoading is true 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": true,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="relative flex-row items-center justify-center gap-3 rounded-lg transition-all duration-200 ease-out active:scale-95 opacity-50 bg-cinnabar text-white px-7 py-3"
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
    ]
  }
  testID="ui-button"
>
  <View
    className="opacity-0 transition-opacity duration-150"
    pointerEvents="none"
  >
    <Text
      className="text-lg text-white"
    >
      Loading Button
    </Text>
  </View>
  <View
    className="absolute inset-0 items-center justify-center"
    pointerEvents="none"
  >
    <ActivityIndicator
      color="#ffffff"
      size="small"
    />
  </View>
</View>
`;
